--- a/labs/lab02-github.qmd
+++ b/labs/lab02-github.qmd
@@ -57,7 +57,7 @@ git push
 ### Add link to your repo below in the cell chunk:
 
 ```sh
-
+https://github.com/nevin-11/JSC370
 ```
 
 ---
@@ -179,9 +179,9 @@ For more information checkout [Creating a pull request](https://docs.github.com/
 * Add details of the pull request below (the commit id of your change (you can find this using `git log`)
 
 ```sh
-commit:
-Author:
-Date:
+commit: a43af51edbb1463216ea604887a43546ed9d0c3c
+Author: nevin-11 <nevin.tsui@mail.utoronto.ca>
+Date: Wed Jan 14 13:43:01 2026 -0500
 ```
 
 ---
